restructured properly the html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,26 +11,33 @@
         <meta property = "og:title" content = "Brev" />
         <meta property = "og:url" content = "https://www.Brev.com/" />
         <title>Brev Language</title>
+        <link rel = "stylesheet" href = "/frontend/css/default.css">
         <link rel = "stylesheet" href = "/frontend/css/index.css">
-        <link rel = "icon" type = "image/png" href = "/frontend/css/images/logo.svg">
+        <link rel = "icon" type = "image/svg+xml" href = "/frontend/css/images/logo.svg">
     </head>
     <body>
+        <!-- <header>
+        </header> -->
         <div class = "background"></div>
-        <section class = "analyzer-container">
-            <div class = "analyzer-window-not-allowed">
-                <img src = "/frontend/css/images/syntax_analyzer_window.svg" alt = "Syntax Analyzer">
-            </div>
-        </section>
-        <section class = "analyzer-container">
-            <a href = "/frontend/lexical.html" class = "analyzer-window">
-                <img src = "/frontend/css/images/lexical_analyzer_window.svg" alt = "Lexical Analyzer">
-            </a>
-            <div class = "header-logo">
-                <img src = "/frontend/css/images/logo.svg" alt = "Logo">
-            </div>
-            <div class = "analyzer-window-not-allowed">
-                <img src = "/frontend/css/images/semantic_analyzer_window.svg" alt = "Semantic Analyzer">
-            </div>
-        </section>
+        <main>
+            <section class = "analyzer-container">
+                <div class = "analyzer-window-not-allowed">
+                    <img src = "/frontend/css/images/syntax_analyzer_window.svg" alt = "Syntax Analyzer">
+                </div>
+            </section>
+            <section class = "analyzer-container">
+                <a href = "/frontend/lexical.html" class = "analyzer-window">
+                    <img src = "/frontend/css/images/lexical_analyzer_window.svg" alt = "Lexical Analyzer">
+                </a>
+                <div class = "header-logo">
+                    <img src = "/frontend/css/images/logo.svg" alt = "Logo">
+                </div>
+                <div class = "analyzer-window-not-allowed">
+                    <img src = "/frontend/css/images/semantic_analyzer_window.svg" alt = "Semantic Analyzer">
+                </div>
+            </section>
+        </main>
+        <!-- <footer>
+        </footer> -->
     </body>
 </html>
