change from textarea to contenteditable

--- a/frontend/lexical.html
+++ b/frontend/lexical.html
@@ -42,7 +42,7 @@
                     <!-- left column -->
                     <div id = "lexical-pane">
                         <div id = "lineNumbers" class = "line-numbers">1</div>
-                        <textarea id = "code" placeholder = "Type in here..."></textarea>
+                        <div id = "code" contenteditable = "true" spellcheck = "false"></div>
                     </div>
                     <!-- right column -->
                     <div id = "table-terminal">
@@ -69,7 +69,6 @@
         <!-- <footer>
         </footer> -->
     </body>
-    <script src = "/backend/js/jslexical/lexical.js"></script>
+    <script src = "/backend/js/jslexical/editor-utils.js"></script>
     <script src = "/backend/js/jslexical/lexicalbuttons.js"></script>
-    <script src = "/backend/js/jslexical/lexicalhighlight.js"></script>
 </html>
