opened the syntax analyzer button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,9 +21,9 @@
         <div class = "background"></div>
         <main>
             <section class = "analyzer-container">
-                <div class = "analyzer-window-not-allowed">
+                <a href = "/frontend/syntax.html" class = "analyzer-window">
                     <img src = "/frontend/css/images/syntax_analyzer_window.svg" alt = "Syntax Analyzer">
-                </div>
+                </a>
             </section>
             <section class = "analyzer-container">
                 <a href = "/frontend/lexical.html" class = "analyzer-window">
