--- a/frontend/lexical.html
+++ b/frontend/lexical.html
@@ -40,9 +40,8 @@
                 <div id = "lexical-inner-background-image"></div>
                 <div id = "lexical-inner-content">
                     <!-- left column -->
-                    <div id = "lexical-pane">
-                        <div id = "lineNumbers" class = "line-numbers">1</div>
-                        <div id = "code" contenteditable = "true" spellcheck = "false"></div>
+                    <div id="lexical-pane">
+                        <div id = "editor" style = "height: 695px; flex: 1;"></div>
                     </div>
                     <!-- right column -->
                     <div id = "table-terminal">
@@ -53,6 +52,7 @@
                                     <tr>
                                         <th>Lexeme</th>
                                         <th>Token</th>
+                                        <th>Token Type</th>
                                     </tr>
                                 </thead>
                                 <tbody></tbody>
@@ -69,6 +69,7 @@
         <!-- <footer>
         </footer> -->
     </body>
-    <script src = "/backend/js/jslexical/editor-utils.js"></script>
-    <script src = "/backend/js/jslexical/lexicalbuttons.js"></script>
+    <script src="/backend/js/tokentypes.js"></script>
+    <script src="/backend/js/jslexical/lexical.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
 </html>
